--- a/BeautyLife/BusinessDetailCell.xib
+++ b/BeautyLife/BusinessDetailCell.xib
@@ -9,7 +9,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="BusinessDetailCell" reuseIdentifier="" id="FMI-1G-QWb" customClass="BusinessDetailCell">
             <rect key="frame" x="0.0" y="0.0" width="150" height="172"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="150" height="172"/>
                 <autoresizingMask key="autoresizingMask"/>
