--- a/BeautyLife/BusinessDetailView.xib
+++ b/BeautyLife/BusinessDetailView.xib
@@ -21,7 +21,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="U8j-O7-LXL">
-                    <rect key="frame" x="11" y="138" width="298" height="29"/>
+                    <rect key="frame" x="5" y="142" width="310" height="29"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <segments>
                         <segment title="最新"/>
@@ -29,9 +29,10 @@
                         <segment title="价格"/>
                         <segment title="评价"/>
                     </segments>
+                    <color key="tintColor" red="0.29803921568627451" green="0.29803921568627451" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                 </segmentedControl>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="w3l-ld-YBX">
-                    <rect key="frame" x="0.0" y="184" width="320" height="384"/>
+                    <rect key="frame" x="0.0" y="177" width="320" height="391"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CYq-di-XqY">
                         <size key="itemSize" width="100" height="100"/>
