--- a/BeautyLife/SubtleCell.xib
+++ b/BeautyLife/SubtleCell.xib
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SubtleCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="subtle" rowHeight="171" id="JZS-eY-pJ5" customClass="SubtleCell">
-            <rect key="frame" x="0.0" y="0.0" width="356" height="171"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="171" id="JZS-eY-pJ5" customClass="SubtleCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="171"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JZS-eY-pJ5" id="9md-pv-BCm">
-                <rect key="frame" x="0.0" y="0.0" width="356" height="170"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="wFt-g4-zLB">
-                        <rect key="frame" x="-1" y="-1" width="357" height="157"/>
+                        <rect key="frame" x="0.0" y="0.0" width="321" height="157"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </imageView>
                 </subviews>
