--- a/BeautyLife/StewardFeeView.xib
+++ b/BeautyLife/StewardFeeView.xib
@@ -146,6 +146,9 @@
                                     <state key="normal" image="payfeesBtn.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <connections>
+                                        <action selector="payFeeAction:" destination="-1" eventType="touchUpInside" id="eBj-rV-WJu"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qSz-Ac-Oya">
                                     <rect key="frame" x="0.0" y="353" width="300" height="46"/>
